# scg-mcp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test_questions.md
code/private_repo/: .gitignore  README.md  presets.ser
code/private_repo/.github/workflows/: gradle.yml
code/private_repo/oolab/: build.gradle
code/private_repo/oolab/src/main/resources/: simulation.fxml  simulationWindow.fxml
data/glide/.semanticgraphs/com/bumptech/glide/: GeneratedAppGlideModule.java.semanticgraphdb  GenericTransitionOptions.java.semanticgraphdb  Glide.java.semanticgraphdb  GlideBuilder.java.semanticgraphdb  GlideContext.java.semanticgraphdb  GlideExperiments.java.semanticgraphdb  ListPreloader.java.semanticgraphdb  MemoryCategory.java.semanticgraphdb  ModelTypes.java.semanticgraphdb  Priority.java.semanticgraphdb  Registry.java.semanticgraphdb  RegistryFactory.java.semanticgraphdb  RequestBuilder.java.semanticgraphdb  RequestManager.java.semanticgraphdb  TransitionOptions.java.semanticgraphdb
data/glide/.semanticgraphs/com/bumptech/glide/load/: Encoder.java.semanticgraphdb  (+14 more)
data/private_repo/: .embeddings_cache.pt
data/private_repo/.semanticgraphs/agh/ics/oop/: Simulation.java.semanticgraphdb  SimulationApp.java.semanticgraphdb  SimulationEngine.java.semanticgraphdb  World.java.semanticgraphdb  WorldGUI.java.semanticgraphdb
src/: bootstrap.py  config.py  debug_embeddings.py  generate_proto.py  mcp_server.py  rag_engine.py  read_semantic_graph.py  run_test.py  test_rag_context.py  upload_to_neo4j.py
src/models/: semantic_graph.proto  semantic_graph_pb2.py
(+481 files in other folders)
