[project]
name = "semantic-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=4.25.0",
    "betterproto>=1.2.5",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
    "sentence-transformers>=2.2.2",
    "neo4j>=6.0.3",
    "hf-xet>=1.2.0",
    "mcp>=1.1.0",
    "torch>=2.4.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]